fix: redesin the alignment of nav bar
Change alignment of nav bar to align with the logo

--- a/styles.css
+++ b/styles.css
@@ -41,12 +41,11 @@ main {
 }
 header {
   display: flex;
+  place-items: center;
   justify-content: space-between;
-  align-items: flex-start;
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
-  margin-left: 1.5rem;
-  margin-right: 1.5rem;
+  padding-right: 1.5rem;
 }
 p {
   color: var(--neutral-Grayish-Violet);
@@ -58,6 +57,7 @@ p {
   gap: 1rem;
   padding: 1rem 1rem;
   margin-top: 1rem;
+  margin-left: 1.5rem;
   background-color: var(--primary-Dark-Violet);
   color: white;
   text-align: center;
@@ -72,10 +72,7 @@ p {
   position: absolute;
   transform: translateX(-130%);
 }
-/* [data-visible="true"] .hamber-menu:first-child{
-    background-color: brown;
-    transform: translate(90%);
-} */
+
 .ul-navigation,
 .ul-action {
   display: grid;
@@ -126,7 +123,7 @@ p {
   font-size: 1rem;
   border-radius: 1.5rem;
 }
-.btn-get-started a{
+.btn-get-started a {
   color: white;
 }
 .shorten-url {
@@ -197,7 +194,7 @@ p {
   font-size: 1rem;
   background-color: white;
 }
-.shorten-history h3{
+.shorten-history h3 {
   white-space: nowrap;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -231,15 +228,12 @@ hr {
 .advanced-statistics {
   margin-top: 3rem;
   text-align: center;
-  /* margin-left: 1.5rem; */
-  /* margin-right: 1.5rem; */
 }
 .advanced-statistics h2 {
   margin-bottom: 2rem;
 }
 .stats-container {
   display: grid;
-  /* gap: 2rem; */
   padding-top: 4rem;
   padding-bottom: 4rem;
 }
@@ -354,17 +348,21 @@ footer {
 /* MEDIUM DEVICE DESIGN */
 @media (min-width: 768px) {
   header {
-    place-items: center;
+    align-items: flex-start;
     margin-left: 9rem;
     margin-right: 9rem;
-    margin-bottom: 3rem;
+    margin-block: .3rem;
   }
   .hamber-menu {
     display: none;
   }
   .nav-bar {
     display: flex;
-    margin-left: auto;
+    justify-content: space-around;
+    transform: translateX(0);
+    top: 3%;
+
+    align-items: start;
     padding: 0;
     width: 100%;
     background-color: transparent;
@@ -372,14 +370,13 @@ footer {
   .ul-navigation {
     display: flex;
     place-items: center;
-    margin-left: 3rem;
+    margin-left: 9rem;
     color: var(--neutral-Gray);
   }
   .ul-action {
     display: flex;
     gap: 2.5rem;
     place-items: center;
-    margin-left: auto;
   }
   .login {
     margin-left: auto;
@@ -421,25 +418,18 @@ footer {
   .shorten-history {
     display: flex;
     align-items: center;
-    /* justify-content: space-between; */
     margin-inline: 9rem;
   }
   .shorten-history div {
     display: flex;
     align-items: center;
     gap: 3rem;
-    /* justify-content: space-between; */
     margin-left: auto;
   }
   [data-copied] {
     width: 6.25rem;
   }
 
-  /* .shorten-history p {
-    display: inline-block;
-    margin-left: auto;
-    width: 100%;
-  } */
   .stats-container {
     display: flex;
     margin-left: 9rem;
